--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<!--jQuery-->
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
+	<script src="script.js"></script>
 	
 	<link rel="stylesheet" href="style.css">
 
