--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<!--jQuery-->
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	
-	<script src="api/jsrender.min.js.map"></script>
+	<!--<script src="api/jsrender.min.js.map"></script>-->
 	
 	<script src="script.js"></script>
 	
@@ -26,12 +26,11 @@
 <body>
 	<!-- top banner -->
 		<div id="banner">
-			<div><h1>To_dorganize</h1></div>
-			<div id="settings"><img href="#"></div>
+			<h1>To_dorganize</h1>
+			<a id="settings" href="#"><img id="settingsIMG" src="images/settings.png" /></a>
 		</div>
 
 	<div id="container"><!-- this is NOT scrollable -->
-		
 		<!-- add new entry -->
 		<div id="newEntry">
 			<h3 id="newEntryName" class="newName col-lg-11" contenteditable="true" placeholder="new entry name">new entry name</h3>
@@ -42,24 +41,45 @@
 		<div id="listBox">
 			<!-- this is scrollable -->
 		
-		<div class="entries bg-warning">
-		<!--may need a checkbox in the front -->
-			<h3>MY ENTRY</h3>
-		</div>
-		<div class="entries bg-primary">
-		<!--may need a checkbox in the front -->
-			<h3>MY ENTRY</h3>
-		</div>
-		<div class="entries bg-success">
-		<!--may need a checkbox in the front -->
-			<h3>MY ENTRY</h3>
-		</div>
-
-		<div class="entries bg-danger">
-		<!--may need a checkbox in the front -->
-			<h3>MY ENTRY</h3>
-		</div>
+		
+			<div class="tomorrow">
+				<h4>Tomorrow:</h4>
+				<div class="entries bg-warning">
+				<!--may need a checkbox in the front -->
+					<a><img class="checksImages" src="images/checked.png"></a>
+					<h3>MY ENTRY</h3>
+					<a><img class="deleteEntryImages" src="images/delete.png"></a>
+				</div>
+			</div>
 			
+			<div class="today">
+				<h4>Today:</h4>
+				<div class="entries bg-primary">
+				<!--may need a checkbox in the front -->
+					<a><img class="checksImages" src="images/checked.png"></a>
+					<h3>MY ENTRY</h3>
+					<a><img class="deleteEntryImages" src="images/delete.png"></a>
+				</div>
+			</div>
+			
+			<div class="yesterday">
+				<h4>Yesterday:</h4>
+				<div class="entries bg-success">
+				<!--may need a checkbox in the front -->
+					<a><img class="checksImages" src="images/checked.png"></a>
+					<h3>MY ENTRY</h3>
+					<a><img class="deleteEntryImages" src="images/delete.png"></a>
+				</div>
+				
+				<div class="entries bg-danger">
+				<!--may need a checkbox in the front -->
+					<a><img class="checksImages" src="images/checked.png"></a>
+					<h3>MY ENTRY</h3>
+					<a><img class="deleteEntryImages" src="images/delete.png"></a>
+				</div>
+			</div>
+		
+
 		
 		</div>
 	</div>
