--- a/index.html
+++ b/index.html
@@ -12,13 +12,10 @@
 	<!--<script src="api/jsrender.min.js.map"></script>-->
 	
 	<script src="script.js"></script>
+	<script src="js/main.js"></script>
 	
 
-	<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
 
-<!-- Optional theme -->
-<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap-theme.min.css">
 
 <!--CSS-->
 <link rel="stylesheet" href="style.css">
