--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
 	<script src="script.js"></script>
 	<script src="js/main.js"></script>
 	<script src="js/class/entry.js"></script>
-	<script src="api/bootstrap-datetimepicker-0.0.11/js/bootstrap-datetimepicker.min.js"></script>
+	<!--<script src="api/bootstrap-datetimepicker-0.0.11/js/bootstrap-datetimepicker.min.js"></script>-->
 	
-
-
+	<link rel="stylesheet" href="//code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
+	<script src="//code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
+	<script src="api/jquery-ui-timepicker-addon.js"></script>
 
 	<!--CSS-->
 	<!-- Latest compiled and minified CSS -->
@@ -26,7 +27,7 @@
 	<!-- Optional theme -->
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap-theme.min.css">
 	
-	<link rel="stylesheet" href="api/bootstrap-datetimepicker-0.0.11/css/bootstrap-datetimepicker.min.css" />
+	<!--<link rel="stylesheet" href="api/bootstrap-datetimepicker-0.0.11/css/bootstrap-datetimepicker.min.css" />-->
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
