--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<!-- add new entry -->
 		<div id="newEntry">
 			<h3 id="newEntryName" class="newName col-lg-11" contenteditable="true" placeholder="new entry name">new entry name</h3>
-			<button class="createEntry btn btn-sm btn-info">+</button>
+			<img src="images/add.png" class="createEntry" height="30" width="30" />
 		</div>
 		
 		<!-- list of entries -->
@@ -51,7 +51,7 @@
 		
 			<div class="tomorrow">
 				<h4>Tomorrow:</h4>
-				<div class="entries bg-warning">
+				<div class="entries well">
 				<!--may need a checkbox in the front -->
 					<a><img class="checksImages" src="images/checked.png"></a>
 					<h3>MY ENTRY</h3>
@@ -61,7 +61,7 @@
 			
 			<div class="today">
 				<h4>Today:</h4>
-				<div class="entries bg-primary">
+				<div class="entries well">
 				<!--may need a checkbox in the front -->
 					<a><img class="checksImages" src="images/checked.png"></a>
 					<h3>MY ENTRY</h3>
@@ -71,14 +71,14 @@
 			
 			<div class="yesterday">
 				<h4>Yesterday:</h4>
-				<div class="entries bg-success">
+				<div class="entries well">
 				<!--may need a checkbox in the front -->
 					<a><img class="checksImages" src="images/checked.png"></a>
 					<h3>MY ENTRY</h3>
 					<a><img class="deleteEntryImages" src="images/delete.png"></a>
 				</div>
 				
-				<div class="entries bg-danger">
+				<div class="entries well">
 				<!--may need a checkbox in the front -->
 					<a><img class="checksImages" src="images/checked.png"></a>
 					<h3>MY ENTRY</h3>
@@ -88,7 +88,7 @@
 			
 			<div class="untimed">
 				<h4>Un-timed:</h4>
-				<div class="entries bg-primary">
+				<div class="entries well">
 				<!--may need a checkbox in the front -->
 					<a><img class="checksImages" src="images/checked.png"></a>
 					<h3>MY ENTRY</h3>
@@ -120,7 +120,7 @@
 			put entry descriptions here
 		</div>
 		
-		<button type="button" class="done btn btn-primary btn-sm btn-block">Done</button>
+		<div class="done">Done</div>
 	</div>
 	<!-- END entry templates-->
 
